[gd_scene load_steps=3 format=3 uid="uid://b4efo78totlt7"]

[ext_resource type="Script" path="res://scripts/item_pick.gd" id="1_v0q2c"]

[sub_resource type="SphereShape3D" id="SphereShape3D_spojt"]

[node name="PickUpComponent" type="Area3D"]
transform = Transform3D(8, 0, 0, 0, 8, 0, 0, 0, 8, 0, 0, 0)
script = ExtResource("1_v0q2c")

[node name="PickupArea" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_spojt")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
